; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/extr_mousedev.c_mousedev_fasync.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/extr_mousedev.c_mousedev_fasync.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.mousedev_client* }
%struct.mousedev_client = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.file*, i32)* @mousedev_fasync to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mousedev_fasync(i32 %0, %struct.file* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.file*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.mousedev_client*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.file* %1, %struct.file** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.file*, %struct.file** %5, align 8
  %9 = getelementptr inbounds %struct.file, %struct.file* %8, i32 0, i32 0
  %10 = load %struct.mousedev_client*, %struct.mousedev_client** %9, align 8
  store %struct.mousedev_client* %10, %struct.mousedev_client** %7, align 8
  %11 = load i32, i32* %4, align 4
  %12 = load %struct.file*, %struct.file** %5, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load %struct.mousedev_client*, %struct.mousedev_client** %7, align 8
  %15 = getelementptr inbounds %struct.mousedev_client, %struct.mousedev_client* %14, i32 0, i32 0
  %16 = call i32 @fasync_helper(i32 %11, %struct.file* %12, i32 %13, i32* %15)
  ret i32 %16
}

declare dso_local i32 @fasync_helper(i32, %struct.file*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
